# CTU

./: .gitignore  CMakeLists-advanced.txt  CMakeLists.txt  README.md  cmake-variants.json
ZALG/01Binary_Tree/: Tridy.cpp  main.cpp
ZALG/02Eight_Queens/: Makefile  main.cpp
ZALG/03Knight/: knight  main.cpp
ZALG/03Knights_Tour/: Makefile  main.cpp
ZALG/04Quick_Sort/: Makefile  main.cpp
ZALG/05Heap_Sort/: Makefile  main.cpp
ZALG/06Tower_Of_Hanoi/: Game.cpp  Game.h  Makefile  Tower.cpp  Tower.h  main.cpp
ZALG/07AVL_Tree/: Makefile  main.cpp
ZALG/08BTree/: Makefile  main.cpp
ZALG/09Lexicographical_Order/: Makefile  main.cpp
ZALG/1Binary_Tree/: Makefile  Tridy.h
ZALG/Skripta/: README.md
ZALG/Skripta/Fronta/: FIFO.cpp  FIFO.h  Makefile  main.cpp
ZALG/Skripta/Zasobnik/: Element.h  LIFO.cpp  LIFO.h  Makefile  main.cpp
ZALG/Zapoctovy_Program/: Makefile  README.md  Tridy.cpp  Tridy.h  main.cpp  pseudokod
ZALG/Zapoctovy_Program/verze_1/: Tridy.cpp
ZALG/Zapoctovy_Program/verze_2/: Makefile  Tridy.cpp  Tridy.h  astar  main.cpp  vstup.txt
ZALG/tyd11/: tyd11.sln
ZALG/tyd11/Debug/: tyd11.ilk
ZALG/tyd11/tyd11/: tyd11.cpp  tyd11.vcxproj  tyd11.vcxproj.filters
ZALG/tyd11/tyd11/Debug/: tyd11.exe.recipe  vc142.idb
ZALG/tyd11/tyd11/Debug/tyd11.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  (+2 more)
ZALG/week7/: Makefile  quicksort.cpp
ZPRO/Zapoctovy_Program/: README.md  Seznam.h
ZPRO/Zapoctovy_Projekt/: Makefile  Program.cpp  README.md  knihy.csv
cmake/: utils.cmake
src/: Seznam.cpp  main.cpp
